src/antlr/antlr/dartParser.java
// Generated from C:/Users/Bayan/Desktop/CompilerProject3/src/antlr\dartParser.g4 by ANTLR 4.10.1
package antlr.antlr;

import antlr.dartParserListener;
import antlr.dartParserVisitor;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		A=1, AA=2, AE=3, AT=4, C=5, CB=6, CBC=7, CIR=8, CIRE=9, CO=10, CP=11, 
		D=12, DD=13, DDD=14, EE=15, EG=16, EQ=17, GT=18, LT=19, LTE=20, LTLT=21, 
		LTLTE=22, ME=23, MINUS=24, MM=25, NE=26, NOT=27, OB=28, OBC=29, OP=30, 
		P=31, PC=32, PE=33, PL=34, PLE=35, PLPL=36, PO=37, POE=38, PP=39, QU=40, 
		QUD=41, QUDD=42, QUQU=43, QUQUEQ=44, ROW=45, SC=46, SE=47, SL=48, SQS=49, 
		SQSE=50, SQUIG=51, ST=52, STE=53, ABSTRACT_=54, AS_=55, ASSERT_=56, ASYNC_=57, 
		AWAIT_=58, ADD_=59, BOXDECORATION_=60, BOXSHAPE_=61, BREAK_=62, CASE_=63, 
		CATCH_=64, CLASS_=65, CONST_=66, CONTINUE_=67, COVARIANT_=68, CONTAINER_=69, 
		CHILD_=70, COLOR_=71, COLORS_=72, DECORATION_=73, DEFAULT_=74, DEFERRED_=75, 
		DO_=76, DYNAMIC_=77, ELSE_=78, ENUM_=79, EXPORT_=80, EXTENDS_=81, EXTENSION_=82, 
		EXTERNAL_=83, FACTORY_=84, FALSE_=85, FINAL_=86, FINALLY_=87, FOR_=88, 
		FUNCTION_=89, GET_=90, GTILDE_=91, HIDE_=92, IF_=93, IMPLEMENTS_=94, IMPORT_=95, 
		IN_=96, INTERFACE_=97, IS_=98, LATE_=99, LET_=100, LIBRARY_=101, LIST=102, 
		MIXIN_=103, NATIVE_=104, NEW_=105, NULL_=106, OF_=107, ON_=108, OPERATOR_=109, 
		PART_=110, REQUIRED_=111, RETHROW_=112, RETURN_=113, SET_=114, SHOW_=115, 
		SHAPE_=116, STATIC_=117, SUPER_=118, SWITCH_=119, SYNC_=120, STACK_=121, 
		THIS_=122, THROW_=123, TRUE_=124, TRY_=125, TYPEDEF_=126, INTTYPE=127, 
		DOUBLETYPE=128, FLOATTYPE=129, STRINGTYPE=130, BoolTYPE=131, QUEUE=132, 
		VARTYPE=133, VOID_=134, WHILE_=135, WITH_=136, YIELD_=137, Main=138, INT=139, 
		BOOL=140, PUBLIC_=141, PROTECT_=142, PRIVATE_=143, Image_=144, IMAGEIN_=145, 
		NETWORKIMAGE_=146, TEXT_=147, TEXTFIELD_=148, LABELTEXT_=149, HINTTEXT_=150, 
		HEIGHT_=151, WIDTH_=152, ROW_=153, COLUMN_=154, CHILDREN=155, MAINAXISALIGNMENT=156, 
		MAINAXISALIGNMENTIN=157, CROSSAXISALIGNMENT=158, CROSSAXISALIGNMENTIN=159, 
		CENTER=160, END=161, START=162, ACCESSMODIFIER=163, NUMBER=164, HEX_NUMBER=165, 
		SingleLineString=166, MultiLineString=167, IDENTIFIER=168, WHITESPACE=169, 
		SINGLE_LINE_COMMENT=170, MULTI_LINE_COMMENT=171, BOOLTYPE=172, DOUBLE=173, 
		STRING=174, VAR=175;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_classDecl = 2, RULE_classBody = 3, 
		RULE_classConstructor = 4, RULE_normalConstructor = 5, RULE_factoryConstructor = 6, 
		RULE_constructorBody = 7, RULE_factoryConstructorBody = 8, RULE_optionalParameters = 9, 
		RULE_parametersConstructor = 10, RULE_constructorName = 11, RULE_functionMain = 12, 
		RULE_statment = 13, RULE_ifBlock = 14, RULE_elseifblock = 15, RULE_whileBlock = 16, 
		RULE_forBlock = 17, RULE_doStatement = 18, RULE_datatypes = 19, RULE_decl = 20, 
		RULE_varplusplus = 21, RULE_varminusminus = 22, RULE_declINT = 23, RULE_decldouble = 24, 
		RULE_declSTRING = 25, RULE_declFLOAT = 26, RULE_declbool = 27, RULE_declVar = 28, 
		RULE_parametersFUNCTION = 29, RULE_assignment = 30, RULE_functionVoid = 31, 
		RULE_function = 32, RULE_functionCall = 33, RULE_boolOPERATIONS = 34, 
		RULE_exprission = 35, RULE_block = 36, RULE_constatnt = 37, RULE_arrays = 38, 
		RULE_array = 39, RULE_queue = 40, RULE_stack = 41, RULE_list = 42, RULE_addlist_queue_stack = 43, 
		RULE_queueINT = 44, RULE_queueDOUBLE = 45, RULE_queueSTRING = 46, RULE_queueFLOAT = 47, 
		RULE_queueBOOL = 48, RULE_queueVAR = 49, RULE_stackINT = 50, RULE_stackDOUBLE = 51, 
		RULE_stackSTRING = 52, RULE_stackFLOAT = 53, RULE_stackBOOL = 54, RULE_stackVAR = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "classDecl", "classBody", "classConstructor", "normalConstructor", 
			"factoryConstructor", "constructorBody", "factoryConstructorBody", "optionalParameters", 
			"parametersConstructor", "constructorName", "functionMain", "statment", 
			"ifBlock", "elseifblock", "whileBlock", "forBlock", "doStatement", "datatypes", 
			"decl", "varplusplus", "varminusminus", "declINT", "decldouble", "declSTRING", 
			"declFLOAT", "declbool", "declVar", "parametersFUNCTION", "assignment", 
			"functionVoid", "function", "functionCall", "boolOPERATIONS", "exprission", 
			"block", "constatnt", "arrays", "array", "queue", "stack", "list", "addlist_queue_stack", 
			"queueINT", "queueDOUBLE", "queueSTRING", "queueFLOAT", "queueBOOL", 
			"queueVAR", "stackINT", "stackDOUBLE", "stackSTRING", "stackFLOAT", "stackBOOL", 
			"stackVAR"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&'", "'&&'", "'&='", "'@'", "','", "']'", "'}'", "'^'", "'^='", 
			"':'", "')'", "'.'", "'..'", "'...'", "'=='", "'=>'", "'='", "'>'", "'<'", 
			"'<='", "'<<'", "'<<='", "'-='", "'-'", "'--'", "'!='", "'!'", "'['", 
			"'{'", "'('", "'|'", "'%'", "'%='", "'+'", "'+='", "'++'", "'#'", "'|='", 
			"'||'", "'?'", "'?.'", "'?..'", "'??'", "'??='", "'ROW'", "';'", "'/='", 
			"'/'", "'~/'", "'~/='", "'~'", "'*'", "'*='", "'abstract'", "'as'", "'assert'", 
			"'async'", "'await'", "'add'", "'BoxDecoration'", "'BoxShape'", "'break'", 
			"'case'", "'catch'", "'class'", "'const'", "'continue'", "'covariant'", 
			"'Container'", "'child'", "'color'", "'Colors'", "'decoration'", "'default'", 
			"'deferred'", "'do'", "'dynamic'", "'else'", "'enum'", "'export'", "'extends'", 
			"'extension'", "'external'", "'factory'", "'false'", "'final'", "'finally'", 
			"'for'", "'Function'", "'get'", "'gtilde'", "'hide'", "'if'", "'implements'", 
			"'import'", "'in'", "'interface'", "'is'", "'late'", "'let'", "'library'", 
			"'List'", "'mixin'", "'native'", "'new'", "'null'", "'of'", "'on'", "'operator'", 
			"'part'", "'required'", "'rethrow'", "'return'", "'set'", "'show'", "'shape'", 
			"'static'", "'super'", "'switch'", "'sync'", "'Stack'", "'this'", "'throw'", 
			"'true'", "'try'", "'typedef'", "'int'", "'double'", "'float'", "'String'", 
			"'bool'", "'Queue'", "'var'", "'void'", "'while'", "'with'", "'yield'", 
			"'main'", null, null, "'public'", "'protect'", "'private'", "'Image'", 
			"'image'", "'NetWorkImage'", "'text'", "'TextField'", "'labelText'", 
			"'hintText'", "'height'", "'width'", "'Row'", "'Column'", "'children'", 
			"'MainAxisAlignment'", "'mainAxisAlignment'", "'CrossAxisAlignment'", 
			"'crossAxisAlignment'", "'center'", "'end'", "'start'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "A", "AA", "AE", "AT", "C", "CB", "CBC", "CIR", "CIRE", "CO", "CP", 
			"D", "DD", "DDD", "EE", "EG", "EQ", "GT", "LT", "LTE", "LTLT", "LTLTE", 
			"ME", "MINUS", "MM", "NE", "NOT", "OB", "OBC", "OP", "P", "PC", "PE", 
			"PL", "PLE", "PLPL", "PO", "POE", "PP", "QU", "QUD", "QUDD", "QUQU", 
			"QUQUEQ", "ROW", "SC", "SE", "SL", "SQS", "SQSE", "SQUIG", "ST", "STE", 
			"ABSTRACT_", "AS_", "ASSERT_", "ASYNC_", "AWAIT_", "ADD_", "BOXDECORATION_", 
			"BOXSHAPE_", "BREAK_", "CASE_", "CATCH_", "CLASS_", "CONST_", "CONTINUE_", 
			"COVARIANT_", "CONTAINER_", "CHILD_", "COLOR_", "COLORS_", "DECORATION_", 
			"DEFAULT_", "DEFERRED_", "DO_", "DYNAMIC_", "ELSE_", "ENUM_", "EXPORT_", 
			"EXTENDS_", "EXTENSION_", "EXTERNAL_", "FACTORY_", "FALSE_", "FINAL_", 
			"FINALLY_", "FOR_", "FUNCTION_", "GET_", "GTILDE_", "HIDE_", "IF_", "IMPLEMENTS_", 
			"IMPORT_", "IN_", "INTERFACE_", "IS_", "LATE_", "LET_", "LIBRARY_", "LIST", 
			"MIXIN_", "NATIVE_", "NEW_", "NULL_", "OF_", "ON_", "OPERATOR_", "PART_", 
			"REQUIRED_", "RETHROW_", "RETURN_", "SET_", "SHOW_", "SHAPE_", "STATIC_", 
			"SUPER_", "SWITCH_", "SYNC_", "STACK_", "THIS_", "THROW_", "TRUE_", "TRY_", 
			"TYPEDEF_", "INTTYPE", "DOUBLETYPE", "FLOATTYPE", "STRINGTYPE", "BoolTYPE", 
			"QUEUE", "VARTYPE", "VOID_", "WHILE_", "WITH_", "YIELD_", "Main", "INT", 
			"BOOL", "PUBLIC_", "PROTECT_", "PRIVATE_", "Image_", "IMAGEIN_", "NETWORKIMAGE_", 
			"TEXT_", "TEXTFIELD_", "LABELTEXT_", "HINTTEXT_", "HEIGHT_", "WIDTH_", 
			"ROW_", "COLUMN_", "CHILDREN", "MAINAXISALIGNMENT", "MAINAXISALIGNMENTIN", 
			"CROSSAXISALIGNMENT", "CROSSAXISALIGNMENTIN", "CENTER", "END", "START", 
			"ACCESSMODIFIER", "NUMBER", "HEX_NUMBER", "SingleLineString", "MultiLineString", 
			"IDENTIFIER", "WHITESPACE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"BOOLTYPE", "DOUBLE", "STRING", "VAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public FunctionMainContext functionMain() {
			return getRuleContext(FunctionMainContext.class,0);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public TerminalNode EOF() { return getToken(dartParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor) return ((dartParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				functionMain();
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MM || _la==PLPL || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (CLASS_ - 65)) | (1L << (DO_ - 65)) | (1L << (FOR_ - 65)) | (1L << (IF_ - 65)) | (1L << (STACK_ - 65)) | (1L << (INTTYPE - 65)) | (1L << (DOUBLETYPE - 65)))) != 0) || ((((_la - 129)) & ~0x3f) == 0 && ((1L << (_la - 129)) & ((1L << (FLOATTYPE - 129)) | (1L << (STRINGTYPE - 129)) | (1L << (QUEUE - 129)) | (1L << (VARTYPE - 129)) | (1L << (VOID_ - 129)) | (1L << (WHILE_ - 129)) | (1L << (IDENTIFIER - 129)) | (1L << (BOOLTYPE - 129)))) != 0)) {
					{
					{
					setState(113);
					line();
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(119);
						line();
						}
						} 
					}
					setState(124);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(125);
				functionMain();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				functionMain();
				setState(127);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DOSTATMENTContext extends LineContext {
		public DoStatementContext doStatement() {
			return getRuleContext(DoStatementContext.class,0);
		}
		public DOSTATMENTContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterDOSTATMENT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitDOSTATMENT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitDOSTATMENT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WHILEBLOCKContext extends LineContext {
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public WHILEBLOCKContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterWHILEBLOCK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitWHILEBLOCK(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitWHILEBLOCK(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FUNCTIONVOIDContext extends LineContext {
		public FunctionVoidContext functionVoid() {
			return getRuleContext(FunctionVoidContext.class,0);
		}
		public FUNCTIONVOIDContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterFUNCTIONVOID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitFUNCTIONVOID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitFUNCTIONVOID(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FORBLOCKContext extends LineContext {
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public FORBLOCKContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterFORBLOCK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitFORBLOCK(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitFORBLOCK(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class STATMENTContext extends LineContext {
		public StatmentContext statment() {
			return getRuleContext(StatmentContext.class,0);
		}
		public TerminalNode SC() { return getToken(dartParser.SC, 0); }
		public STATMENTContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterSTATMENT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitSTATMENT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitSTATMENT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FUNNCTIONContext extends LineContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FUNNCTIONContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterFUNNCTION(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitFUNNCTION(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitFUNNCTION(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ARRAYSContext extends LineContext {
		public ArraysContext arrays() {
			return getRuleContext(ArraysContext.class,0);
		}
		public ARRAYSContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterARRAYS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitARRAYS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitARRAYS(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CLASSDECLERATIONContext extends LineContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public CLASSDECLERATIONContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterCLASSDECLERATION(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitCLASSDECLERATION(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitCLASSDECLERATION(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IFBLOCKContext extends LineContext {
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public IFBLOCKContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).enterIFBLOCK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof antlr.dartParserListener) ((antlr.dartParserListener)listener).exitIFBLOCK(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitIFBLOCK(this);
			else return visitor.visitChildren(this);
		}
	}
